CLOSED - # 634: Updating Log Gateway has no effect on scope https://verticon-trac.sourcerepo.com/verticon_Tracker/ticket/634